projects/compiler/test/typechecker/bindingdecl/error_invalid_destructuring_tuple_non_tuple.3.out
Error at %FILE_NAME%:1:5
Invalid destructuring
  |  var (a, b): String
         ^
A value of type 'String' cannot be destructured as a tuple
